<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sv_profile"
            android:fillViewport="false">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:paddingTop="@dimen/icon_margin">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" android:background="@drawable/border_unchecked"
                    android:padding="@dimen/icon_margin">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/iv_avatar"
                        android:src="@drawable/avatar_default"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/label_undefined"
                        android:id="@+id/tv_username" android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" android:background="@drawable/border_unchecked"
                    android:layout_marginTop="@dimen/icon_margin"
                    android:padding="@dimen/icon_margin" android:gravity="center_vertical" android:id="@+id/btn_posts">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/label_posts"
                        android:id="@+id/label_posts"/>
                <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView4" android:src="@drawable/arrow_right"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/icon_margin">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/label_description"
                            android:id="@+id/label_description"
                            android:textStyle="bold"
                            android:gravity="center_vertical"
                            android:padding="@dimen/icon_margin"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="[Edit]"
                            android:id="@+id/btn_edit_decription"
                            android:gravity="center_vertical"/>

                </LinearLayout>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_undefined"
                        android:id="@+id/tv_description"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/icon_margin"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/icon_margin">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Birthday"
                        android:id="@+id/label_birthday"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:padding="@dimen/icon_margin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="[Edit]"
                        android:id="@+id/btn_edit_birthday"
                        android:gravity="center_vertical"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_undefined"
                    android:id="@+id/tv_birthday"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/icon_margin"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/icon_margin">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Gender"
                        android:id="@+id/label_gender"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:padding="@dimen/icon_margin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="[Edit]"
                        android:id="@+id/btn_edit_gender"
                        android:gravity="center_vertical"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_undefined"
                    android:id="@+id/tv_gender"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/icon_margin"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/icon_margin">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Sexuality"
                        android:id="@+id/label_sexuality"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:padding="@dimen/icon_margin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="[Edit]"
                        android:id="@+id/btn_edit_sexuality"
                        android:gravity="center_vertical"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_undefined"
                    android:id="@+id/tv_sexuality"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/icon_margin"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/icon_margin">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Race"
                        android:id="@+id/label_race"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:padding="@dimen/icon_margin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="[Edit]"
                        android:id="@+id/btn_edit_race"
                        android:gravity="center_vertical"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/label_undefined"
                    android:id="@+id/tv_race"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/icon_margin"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>